--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <main>
-      <div class="description">
+      <div class="description container">
         <h1>Guess My Number!</h1>
         <p class="between">(Between 1 and 20)</p>
+        <p class="message">Start guessing...</p>
       </div>
       <div class="line"><div class="number">?</div></div>
-      <div class="container">
+      <div class="wrapper container">
         <section class="control">
           <input type="number" class="guess" />
           <div class="buttons">
@@ -23,7 +24,6 @@
           </div>
         </section>
         <section class="info">
-          <p class="message">Start guessing...</p>
           <p class="answer"></p>
           <p class="label-score">💯 Score: <span class="score">20</span></p>
           <p class="label-highscore">
